# NHMissionControl

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: e96bc4b64eba_initial_migration.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_pipeline_tables.py  002_interactive_sessions.py
backend/src/: __init__.py
backend/src/api/: __init__.py  auth.py  cc_sessions.py  deps.py  finance.py  guardrails.py  main.py  nerve_center.py  notifications.py  pipeline.py  pipeline_orchestrator.py  po_review.py  resources.py  webhooks.py
backend/src/core/: __init__.py  config.py  database.py  models.py  schemas.py
backend/src/core/nerve_center/: __init__.py  analyzer_engine.py  asset_registry.py  assets_data.json  dispatcher.py  events.py  orchestrator.py  syncwave_client.py  system_status.py  websocket_hub.py
backend/src/core/pipeline/: __init__.py  cc_session_manager.py  epochs.py  escalation.py  guardrails.py  handoff.py  health_inspector.py  interactive_backend.py  neural_ralph.py  notifications.py  orchestrator.py  output_parser.py  resource_manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/epoch1/: __init__.py  test_auth.py
backend/tests/epoch3/: __init__.py  test_pipeline.py
epochs/: epoch_manifest.yaml
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  nh-api.spec.ts.old  pipeline.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AlertsPanel.tsx  CCSessionViewer.tsx  ErrorBoundary.tsx  Header.tsx  InteractiveTerminal.tsx  JobsList.tsx  LiveJobStream.tsx  PipelineChart.tsx  ProjectAnalyzer.tsx  ProjectsList.tsx  Sidebar.tsx  StatusCard.tsx  Toast.tsx  ToolCallViewer.tsx  index.ts
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
frontend/src/components/sf/: AgentPerformancePanel.tsx  CostAnalyticsPanel.tsx  index.ts
frontend/src/components/ui/: alert.tsx  badge.tsx  card.tsx  progress.tsx  skeleton.tsx
frontend/src/hooks/: index.ts  usePipeline.ts  usePipelineSocket.ts  useWebSocket.ts
frontend/src/pages/: Assets.tsx  CCSessions.tsx  DashboardPage.tsx  Finance.tsx  FinancePage.tsx  GuardrailsMonitor.tsx  IntelligencePage.tsx  NerveCenter.tsx  Opportunities.tsx  PipelineDashboard.tsx  PipelinePage.tsx  SettingsPage.tsx  SystemOverview.tsx  index.ts
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/providers/: AuthProvider.tsx  ThemeProvider.tsx
frontend/src/types/: analyzer.ts  index.ts
scripts/: lock_epoch.py  unlock_epoch.py
tests/: __init__.py  conftest.py  mock_nh_api.py  test_alerts.py  test_dashboard.py  test_health.py  test_metrics.py  test_nh_api.py  test_projects.py
