[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nh-mission-control"
version = "0.1.0"
description = "Neural Holding Mission Control - Autonomous Enterprise Dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rafal", email = "rafal@neuroholding.ai" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    
    # Cache & Queue
    "redis>=5.0.1",
    "celery>=5.3.6",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.3",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    
    # Type Checking
    "mypy>=1.8.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    
    # Linting & Formatting
    "ruff>=0.1.13",
    "black>=24.1.1",
    "isort>=5.13.2",
    
    # Pre-commit
    "pre-commit>=3.6.0",
]

[project.scripts]
nh = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost:5433/nh_test",
    "SECRET_KEY=test-secret-key-for-testing-only",
    "ENVIRONMENT=test",
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
